--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "server": "json-server -p3001 --watch db.json",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "npm run lint:format && npm run lint:fix",
@@ -12,9 +13,11 @@
     "test": "jest ./src --verbose"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "jotai": "^1.5.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -36,6 +39,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.4.4",
+    "json-server": "^0.17.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.2",
     "ts-jest": "^27.1.1",
