--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jotai": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.8"
+    "react-query": "^3.34.8",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
